# lume-warpx

./: .gitignore  .readthedocs.yaml  LICENSE.md  README.md  pyproject.toml
docs/: archiving.rst  conf.py  configuration.rst  examples.rst  index.rst  installation.rst  plotting.rst  quickstart.rst
examples/pierce_diode/: README.md  pierce_diode.yaml  run.py
examples/plasma_acceleration/: README.md  plasma_acceleration.yaml  run.py
examples/thermionic_gun/: README.md  gun.yaml  run.py
examples/uniform_plasma/: README.md  run.py  uniform_plasma.yaml
warpx/: __init__.py  warpx.py
