[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lume-warpx"
version = "1.0.0"
description = "LUME framework interface for WarpX"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ryland Goldman", email = "rylandgoldman@ucla.edu" }]
license = "BSD-3-Clause"
license-files = ["LICENSE.md"]
dependencies = [
    "lume-base",
    "openpmd-api",
    "openpmd-viewer",
    "openpmd-beamphysics",
    "numpy",
    "scipy",
    "h5py",
    "matplotlib"
  ]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/ryland-goldman/lume-warpx"
Repository = "https://github.com/ryland-goldman/lume-warpx"
